--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,7 @@
   </head>
   <body>
 
-    <div id="root">
-
-      <div ></div>
-    </div>
+    <div id="root"> </div>
     
     <!--
       This HTML file is a template.
